# 05a.-expose-and-integrate-with-a-webhook-system

./: README.md
node-webhooks/: app.js  package-lock.json  package.json  webhooks.db
python-webhooks/: main.py  pyproject.toml
