[tool.poetry]
name = "python-webhooks"
version = "0.1.0"
description = ""
authors = ["R.Ø.M <rasmusorum@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.29.0"
fastapi = "^0.110.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
